--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "it-logger",
+  "name": "info-logger",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.3",
     "materialize-css": "^1.0.0",
-    "moment": "^2.24.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-moment": "^0.9.2",
-    "react-redux": "^7.0.3",
-    "react-scripts": "3.0.1",
-    "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "moment": "^2.29.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-moment": "^1.1.1",
+    "react-scripts": "4.0.1",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,7 +23,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -38,8 +41,8 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^4.1.0",
-    "json-server": "^0.15.0"
+    "concurrently": "^5.3.0",
+    "json-server": "^0.16.3"
   },
   "proxy": "http://localhost:5000"
 }
